--- a/index.html
+++ b/index.html
@@ -8,10 +8,10 @@
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
   <!-- Bootstrap CSS -->
-  <link rel="stylesheet" href="style.css" type="text/css">
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
-    integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+  integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+  <link rel="stylesheet" href="style.css" type="text/css">
 </head>
 
 <body>
@@ -82,9 +82,8 @@
   <div class="pjs-main">
     <div class="container">
       <div class="row">
-        <div class="col-lg-8">
+        <div class="pjs-main-block col-lg-8">
           <div class="pjs-naver-advertise-photo-big">
-
           </div>
           <div class="pjs-naver-news-realtime">
             
@@ -99,7 +98,7 @@
 
           </div>
         </div>
-        <div class="col-lg-4">
+        <div class="pjs-main-block col-lg-4">
           <div class="pjs-naver-user">
 
           </div>
