--- a/web-mobile-publishing/ssafy_landing/index.html
+++ b/web-mobile-publishing/ssafy_landing/index.html
@@ -25,14 +25,14 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
     <script src="./js/ld.js"></script>
 
-    <title>Title</title>
+    <title>Jutopia</title>
   </head>
   <body>
     <!-- Header -->
     <div class="header-wrapper">
       <div class="header-contents">
         <!-- 타이틀 -->
-        <p class="title" onclick="ssafy.ld.goPage(0)">JIWOO LEE</p>
+        <p class="title" onclick="ssafy.ld.goPage(0)">PJS</p>
 
         <!-- 상단 메뉴 && 모바일 메뉴 -->
         <div class="nav-bar">
@@ -56,7 +56,8 @@
         <div class="section-content">
           <h1>
             <span>Hello.</span> <br />
-            <span>I'm Frontend Developer.</span>
+            <span>Java Back-End Developer</span>
+            <span>Juseong Park.</span>
           </h1>
         </div>
         <button class="btn-scroll-down" onclick="ssafy.ld.goPage(1)">
@@ -69,13 +70,13 @@
         <div class="section-content">
           <div>
             <p class="txt">About Me</p>
-            <h2 class="txt">Lee Jiwoo</h2>
+            <h2 class="txt">PJS</h2>
             <p class="txt">
               안녕하세요.<br>
-              삼성 청년 SW 아카데미의 프로젝트 컨설턴트입니다.<br>
-              저는 개발을 좋아하고 배우는 것을 좋아합니다.<br>
-              여러분들에게 개발자로서의 방향을<br>
-              제시해드리겠습니다.<br>
+              삼성 청년 SW 아카데미 학생 박주성입니다.<br>
+              저는 백엔드 개발자를 목표로<br>
+              자바 Spring Boot를 공부하고있습니다.<br>
+              화이팅.<br>
             </p>
           </div>
           <div>
@@ -107,7 +108,7 @@
 
       <!-- footer-->
       <div class="footer">
-        <p>Copyright 2019 Lee Jiwoo All Right Reserved.</p>
+        <p>Copyright 2019 PJS All Right Reserved.</p>
       </div>
     </div>
 
