--- a/web-mobile-publishing/ssafy_landing/index_beginner.html
+++ b/web-mobile-publishing/ssafy_landing/index_beginner.html
@@ -25,14 +25,14 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
     <script src="./js/ld.js"></script>
 
-    <title>Title</title>
+    <title>Jutopia</title>
   </head>
   <body>
     <!-- Header -->
     <div class="header-wrapper">
       <div class="header-contents">
         <!-- 타이틀 -->
-        <p class="title" onclick="ssafy.ld.goPage(0)">MY NAME</p>
+        <p class="title" onclick="ssafy.ld.goPage(0)">PJS</p>
 
         <!-- 상단 메뉴 && 모바일 메뉴 -->
         <div class="nav-bar">
